# universal-ventilator-web

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  lv_conf.h  main.cpp
application/: .gitignore  CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.cpp  mouse_cursor_icon.c
common/data/: ScopeData.csv  ScopeData1.csv
common/src/: uvent.cpp  uvent.h  uvent_conf.h
common/src/actuators/: actuator.cpp  actuator.h  stepper.cpp
common/src/alarm/: alarm.cpp  alarm.h  sdl_tone_driver.cpp  speaker.cpp  tone.h
common/src/controls/: control.cpp  control.h  machine.cpp  machine.h  waveform.cpp  waveform.h
common/src/controls/interface/: charts.cpp  charts.h  interface.cpp  interface.h
common/src/display/: main_display.cpp  main_display.h
common/src/display/layouts/: config_layouts.cpp  layouts.h  primary_layouts.cpp
common/src/display/screens/: primary_screen.cpp  screen.cpp  screen.h
common/src/display/styles/: component_styles.cpp
common/src/eeprom/: storage.cpp  storage.h
common/src/sensors/: pressure_sensor.cpp  pressure_sensor.h
common/src/utilities/: be_tm_tagline_logo_png.c  util.cpp  util.h  waves.h
docs/: index.html
src/: uvent.cpp  uvent.h  uvent_conf.h
src/actuators/: stepper.h
src/alarm/: alarm.cpp  sdl_tone_driver.h  speaker.cpp  speaker.h
src/controls/: control.cpp  control.h  fault.h  machine.h  waveform.cpp  waveform.h
src/controls/interface/: charts.cpp  interface.cpp
src/display/: main_display.h
src/display/layouts/: config_layouts.cpp  layouts.h  primary_layouts.cpp
src/display/screens/: primary_screen.cpp  screen.h  startup_screen.cpp
src/display/styles/: component_styles.cpp
src/eeprom/: storage.cpp  storage.h
src/sensors/: pressure_sensor.cpp  pressure_sensor.h
src/utilities/: be_tm_tagline_logo_png.c  util.h
webapp/: .gitignore  CMakeLists.txt  lv_conf.h  lvgl_shell.html  main.cpp
